@@ -7,4 +7,4 @@ Feedback welcome:
 https://github.com/joernhees/userdocker
 """
 
-__version__ = '2.1.0-dev'
+__version__ = '2.1.0-dev1'
